[tool.poetry]
name = "jaffle-shop"
version = "0.1.0"
description = ""
authors = ["Wahid Atoui <atouiwahid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.7.4"
dbt-databricks = "^1.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
